# lib/api-spec/openapi.yaml
@@ -155,6 +155,11 @@ paths:
           in: query
           schema:
             type: integer
+        - name: companyId
+          in: query
+          required: false
+          schema:
+            type: integer
       responses:
         "200":
           description: OK
@@ -380,6 +385,11 @@ paths:
           in: query
           schema:
             type: integer
+        - name: companyId
+          in: query
+          required: false
+          schema:
+            type: integer
       responses:
         "200":
           description: OK
@@ -402,6 +412,11 @@ paths:
           in: query
           schema:
             type: integer
+        - name: companyId
+          in: query
+          required: false
+          schema:
+            type: integer
       responses:
         "200":
           description: OK
@@ -419,6 +434,11 @@ paths:
       parameters:
         - name: unitId
           in: query
+          schema:
+            type: integer
+        - name: companyId
+          in: query
+          required: false
           schema:
             type: integer
       responses:
@@ -497,6 +517,11 @@ paths:
           in: query
           schema:
             type: integer
+        - name: companyId
+          in: query
+          required: false
+          schema:
+            type: integer
       responses:
         "200":
           description: OK
@@ -573,6 +598,11 @@ paths:
           in: query
           schema:
             type: integer
+        - name: companyId
+          in: query
+          required: false
+          schema:
+            type: integer
       responses:
         "200":
           description: OK
@@ -647,6 +677,11 @@ paths:
       parameters:
         - name: unitId
           in: query
+          schema:
+            type: integer
+        - name: companyId
+          in: query
+          required: false
           schema:
             type: integer
       responses:
@@ -729,6 +764,11 @@ paths:
           in: query
           schema:
             type: integer
+        - name: companyId
+          in: query
+          required: false
+          schema:
+            type: integer
       responses:
         "200":
           description: OK
@@ -749,6 +789,11 @@ paths:
             type: integer
         - name: unitId
           in: query
+          schema:
+            type: integer
+        - name: companyId
+          in: query
+          required: false
           schema:
             type: integer
       responses:
@@ -773,6 +818,11 @@ paths:
             type: integer
         - name: unitId
           in: query
+          schema:
+            type: integer
+        - name: companyId
+          in: query
+          required: false
           schema:
             type: integer
       responses:
